--- a/404.html
+++ b/404.html
@@ -1,6 +1,13 @@
 ---
-layout: page
-permalink: /404.html
+layout: default
+title: "404 Page Not Found"
+permalink: 404.html
 ---
 
-The requested resource could not be found
+<div class="page-content wc-container">
+  <h3>404 Page Not Found</h3>
+  <h4>The page you were looking for is not found.</h4>
+  <p>Sorry, we've misplaced that URL or it's pointing to something that 
+  	doesn't exist. <a href="{{ site.baseurl }}">Head back hom
+  	to try finding it again.</p>
+</div>
