--- a/404.html
+++ b/404.html
@@ -8,6 +8,5 @@ permalink: 404.html
   <h3>404 Page Not Found</h3>
   <h4>The page you were looking for is not found.</h4>
   <p>Sorry, we've misplaced that URL or it's pointing to something that 
-  	doesn't exist. <a href="{{ site.baseurl }}">Head back hom
-  	to try finding it again.</p>
+  	doesn't exist. Please <a href="{{ site.baseurl }}">head back home</a> to try finding it again.</p>
 </div>
