--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ tagline:
     {% else %}
     {% if post.shortinfo %}
     {{ post.shortinfo }}
+	<a href="{{ site.BASE_PATH }}{{ post.url }}">Continue reading...</a>
     {% elsif post.description %}
     {{ post.description }}
     {% else %}
